# webhooks-challenge

./: pyproject.toml  pytest.ini
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/tests/: test_webhooks.py
dashboard/: urls.py  views.py
realmate_challenge/: settings.py  urls.py
templates/: base.html
templates/dashboard/: conversations.html  messages.html
